<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OptionsActivity">


    <ImageView
        android:id="@+id/logo_area"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="70dp"
        android:background="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/app_logo_description" />

    <ImageView
        android:layout_width="440dp"
        android:layout_height="450dp"
        android:layout_marginStart="-140dp"
        android:layout_marginTop="490dp"
        android:background="@drawable/circle_shape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/circle_shape_description" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_area">

        <Button
            android:id="@+id/find_your_business"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:text="@string/find_that_business"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:background="@drawable/square_shape" />

<!--        <Button-->
<!--            android:id="@+id/business_btn"-->
<!--            android:layout_width="300dp"-->
<!--            android:layout_height="40dp"-->
<!--            android:layout_marginTop="20dp"-->
<!--            android:text="Business"-->
<!--            android:background="@drawable/square_shape"/>-->
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>